<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="black_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="share_message">Попробуйте этот курс: https://practicum.yandex.ru/android-developer/</string>
    <string name="share_intent_message">Поделиться через</string>
    <string name="email">akhabanin@yandex.ru</string>
    <string name="message_to_support">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="subject_message_to_support">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_hint">Поиск</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="renew">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="default_timer">00:00</string>
    <string name="library_is_empty">Ваша медиатека пуста</string>
    <string name="no_playlists">Вы не создали \nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create">Создать</string>
    <string name="playlis_created">Плейлист %1$s создан</string>
    <string name="confirm_exit_title">Завершить создание плейлиста?</string>
    <string name="confirm_exit_message">Все несохраненные данные будут потеряны</string>
    <string name="finish">Завершить</string>
    <string name="cancel">Отмена</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="added_to_playlist_successfully">Добавлено в плейлист %1$s</string>
    <string name="track_has_already_been_added">Трек уже добавлен в плейлист %1$s</string>
    <string name="track_count">%1$d %2$s</string>
    <string name="track_duration"> %1$s %2$s </string>
    <string name="playlist_is_empty">Ваш плейлист пуст</string>
    <string name="you_want_to_delete_the_track">Хотите удалить трек?</string>
    <string name="delete_the_track">Удалить трек</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="no_tracks_for_sharing">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="ok">OK</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="you_want_to_delete_the_playlist">Хотите удалить плейлист?</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>


</resources>