<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical"
    tools:context=".presentation.settings.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginBottom="@dimen/header_linear_layout_margin_bottom">

        <TextView
            style="@style/HeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:text="@string/settings" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/StringTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/black_theme" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="11dp"
            app:thumbTint="@color/switcher_tumb_tint"
            app:trackTint="@color/switcher_track_tint" />

    </LinearLayout>

    <TextView
        android:id="@+id/share"
        style="@style/StringTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_app"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:padding="12dp"
        app:drawableEndCompat="@drawable/share" />

    <TextView
        android:id="@+id/support"
        style="@style/StringTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/support"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:padding="12dp"
        app:drawableEndCompat="@drawable/support" />

    <TextView
        android:id="@+id/user_agreement"
        style="@style/StringTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_agreement"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:padding="12dp"
        app:drawableEndCompat="@drawable/arrow_forward" />

</LinearLayout>
