<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical"
    tools:context=".presentation.search.SearchFragment">

    <androidx.appcompat.widget.Toolbar
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">


        <TextView
            style="@style/HeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/search"
            android:layout_marginStart="12dp" />


    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        style="@style/LinearEditArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/searchArea"
            style="@style/EditArea"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableStart="@drawable/search_icon"
            android:hint="@string/search_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/clearButton"
            style="@style/ClearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="140dp"
        android:indeterminateTint="@color/cursor_and_progressBar"
        android:visibility="gone"
        tools:visibility="visible" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTracks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/llSearchHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="gone">

            <TextView
                android:id="@+id/SearchHistoryHeader"
                style="@style/SearchHistoryHeader"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:gravity="center"
                android:text="@string/you_searched" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTracksHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clearHistoryButton"
                style="@style/ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_history"
                android:visibility="visible"
                tools:visibility="visible" />

        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:id="@+id/placeholderMessage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/placeholderImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:src="@drawable/no_internet" />

        <TextView
            android:id="@+id/placeholderText"
            style="@style/PlaceholderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_internet" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/placeholderButtonRenew"
            style="@style/ActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/renew"
            tools:visibility="visible" />

    </LinearLayout>
</LinearLayout>