<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/header_textSize"
            android:textFontWeight="500"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="28dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/button_marginBottom"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_textSize"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/button_corner_radius"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/button_icon_padding"
            app:iconSize="@dimen/button_icon_size"
            app:iconTint="@color/button_text_color" />


        <Button
            android:id="@+id/libraryButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/button_marginBottom"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/library"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_textSize"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/button_corner_radius"
            app:icon="@drawable/library"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/button_icon_padding"
            app:iconSize="@dimen/button_icon_size"
            app:iconTint="@color/button_text_color" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"

            android:text="@string/settings"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_textSize"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/button_corner_radius"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/button_icon_padding"
            app:iconSize="@dimen/button_icon_size"
            app:iconTint="@color/button_text_color" />

    </LinearLayout>

</LinearLayout>