<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="383dp"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical"
    app:behavior_draggable="true"
    app:behavior_expandedOffset="0dp"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <ImageView
        android:id="@+id/stripe"
        android:layout_width="50dp"
        android:layout_height="4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bottom_sheet_stripe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/playlist"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stripe">


        <ImageView
            android:id="@+id/cover"
            style="@style/rvCover"
            android:layout_marginStart="13dp"
            android:src="@drawable/placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            style="@style/rvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:text=""
            app:layout_constraintStart_toEndOf="@id/cover"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/count"
            style="@style/rvDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:layout_marginTop="1dp"
            android:text=""
            app:layout_constraintStart_toEndOf="@id/cover"
            app:layout_constraintTop_toBottomOf="@id/name"
            tools:text="The Beatles" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/share"
        style="@style/rvName"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:text="@string/share"
        app:layout_constraintTop_toBottomOf="@id/playlist"
        tools:text="Поделиться" />

    <TextView
        android:id="@+id/edit"
        style="@style/rvName"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:text="@string/edit_info"
        app:layout_constraintTop_toBottomOf="@id/share" />

    <TextView
        android:id="@+id/delete"
        style="@style/rvName"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:text="@string/delete_playlist"
        app:layout_constraintTop_toBottomOf="@id/edit" />

</androidx.constraintlayout.widget.ConstraintLayout>